APIキーの設定

--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -54,22 +54,22 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 10,
-     "status": "ok",
-     "timestamp": 1744862990934,
-     "user": {
-      "displayName": "中西崇文",
-      "userId": "05483787995557177837"
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
      },
-     "user_tz": -540
-    },
-    "id": "zdTC8km-OpiG"
-   },
-   "outputs": [],
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "API_KEY=\"XXXXXXXXXXXXXXXXX\""
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -90,42 +90,7 @@
    },
    "outputs": [],
    "source": [
-    "os.environ[\"OPENAI_API_KEY\"] = API_KEY\n",
-    "openai.api_key = API_KEY"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 17163,
-     "status": "ok",
-     "timestamp": 1744863012438,
-     "user": {
-      "displayName": "中西崇文",
-      "userId": "05483787995557177837"
-     },
-     "user_tz": -540
-    },
-    "id": "wtAj70MKOlRQ",
-    "outputId": "b838d56c-791e-411a-c1d8-3bbb8ac2382e"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mounted at /content/drive\n"
-     ]
-    }
-   ],
-   "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
+    "openai.api_key = os.getenv(\"API_KEY\")"
    ]
   },
   {
