--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 6477,
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "executionInfo": {
      "elapsed": 3,
@@ -90,12 +90,12 @@
    },
    "outputs": [],
    "source": [
-    "openai.api_key = os.getenv(\"API_KEY\")"
+    "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "executionInfo": {
      "elapsed": 18069,
@@ -119,7 +119,7 @@
     "        self.page_content = text\n",
     "        self.metadata = metadata\n",
     "\n",
-    "dir_path = \"/content/drive/MyDrive/ユニークAIシステム構築道場/RAG/loadtext/\"\n",
+    "dir_path = \"loadtext/\"\n",
     "\n",
     "documents = []\n",
     "\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "executionInfo": {
      "elapsed": 3637,
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -195,16 +195,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. 線形代数における「線形写像」は何を意味しますか？\n",
-      "2. ベクトルと行列ではどのような計算や操作が可能ですか？\n",
-      "3. 具体的に、線形変換や行列の積（写像の合成）をする際の計算手順は何ですか？\n",
-      "4. コサイン類似度の計算に線形代数のどの部分が用いられますか？\n",
-      "5. 線形代数における「核(Ker)」とは何ですか？\n",
-      "6. Pythonで線形代数の計算を行う場合、どのようなライブラリやメソッドが利用可能ですか？\n",
-      "7. 線形代数がデータサイエンス等の実用的な応用分野でどのように用いられますか？\n",
-      "8. 「連立一次方程式」はどのように解くことができますか？\n",
-      "9. 「連立一次方程式」をベクトルと行列を用いて表現することは何を可能にしますか？\n",
-      "10. ベクトルや行列、線形変換等の数学的な概念を体系的に学ぶことで得られる利点は何ですか？\n"
+      "1. 教科書のp.62〜p.106ページで取り上げられている線形代数の主な内容は何ですか？\n",
+      "2. 教材として使用されているYouTubeのprof.Gilbert Strangの線形代数授業「1. The Geometry of Linear Equations」の主要な教訓は何ですか？\n",
+      "3. 写像の合成とは何ですか、その中で線形変換𝑓と𝑔の合成がどのように機能するか説明してください。\n",
+      "4. 線形変換𝑓によって𝑅のベクトル𝒙を𝑅のベクトル𝑓𝒙に変換したあと、そのベクトルをさらに線形変換𝑔によって𝑅のベクトル𝑔(𝑓𝒙)に変換する、このプロセスの重要性について詳しく説明してください。\n",
+      "5. 𝒙𝐴𝒙𝐵𝐴𝒙𝐴𝐵≠𝐵𝐴とはどういう意味ですか？\n",
+      "6. 課題中の単純パーセプトロンの表現 𝒚=𝒘$𝒙+𝑏から 𝒚=𝒘$𝒙へ移行する際のバイアス項(+𝑏)の役割は何ですか？\n",
+      "7. Lec02.ipynbの「入力画像ファイルから指定したディレクトリの中の画像から一番類似性が高い画像ファイル名を検索するプログラム」の部分における、コサイン類似度の計算の重要性は何ですか？\n",
+      "8. マンハッタン距離、ユークリッド距離、チェビシェフ距離とマハラノビス距離の違いは何ですか？\n",
+      "9. ベクトルの新データ（値段850円、重さ1450g）の計算方法を説明できますか？\n",
+      "10. 教科書p.114〜p.118で扱われている線形代数の主題は何ですか？\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -241,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "私の知識からは、疑似逆行列についての情報を提供することはできません。お手数をおかけしますが、それについては別の情報源をご覧になるか、専門家に問い合わせてください。\n"
+      "すみませんが、提供された情報には疑似逆行列についての説明は含まれていません。したがって、その質問には答えられません。\n"
      ]
     }
    ],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -276,11 +276,19 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yamadayuuhei/研究/Nakanishi_Lab/AIME-based-Explanation-System-for-ChatGPT-Outputs/AIME-based-Explanation-System/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-      "* Running on public URL: https://d070f60ce52cdb6e86.gradio.live\n",
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* Running on public URL: https://3b9d32932ce89b4d3c.gradio.live\n",
       "\n",
       "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
      ]
@@ -288,7 +296,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://d070f60ce52cdb6e86.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://3b9d32932ce89b4d3c.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -301,7 +309,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +326,7 @@
     "import os\n",
     "\n",
     "# ドキュメントをロード\n",
-    "dir_path = '/content/drive/MyDrive/ユニークAIシステム構築道場/RAG/loadtext/'\n",
+    "dir_path = 'loadtext/'\n",
     "\n",
     "documents = []\n",
     "\n",
@@ -372,16 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "JtOXlLBeFp5y"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -402,19 +401,35 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/nq/n3nkdz2558g2zjbwzth6xy700000gn/T/ipykernel_35474/350495278.py:58: UserWarning: You have not specified a value for the `type` parameter. Defaulting to the 'tuples' format for chatbot messages, but this is deprecated and will be removed in a future version of Gradio. Please set type='messages' instead, which uses openai-style dictionaries with 'role' and 'content' keys.\n",
+      "  chatbot = gr.ChatInterface(fn=chat_with_ai, chatbot=gr.Chatbot())\n",
+      "/Users/yamadayuuhei/研究/Nakanishi_Lab/AIME-based-Explanation-System-for-ChatGPT-Outputs/AIME-based-Explanation-System/lib/python3.13/site-packages/gradio/chat_interface.py:321: UserWarning: The gr.ChatInterface was not provided with a type, so the type of the gr.Chatbot, 'tuples', will be used.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-      "Running on public URL: https://135cc0aa561ecf76f8.gradio.live\n",
+      "* Running on local URL:  http://127.0.0.1:7861\n",
       "\n",
-      "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
+      "Could not create share link. Please check your internet connection or our status page: https://status.gradio.app.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/04/23 16:00:02 [W] [service.go:132] login to server failed: dial tcp 44.237.78.176:7000: i/o timeout\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://135cc0aa561ecf76f8.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -427,7 +442,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 15,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +465,7 @@
     "        self.metadata = metadata\n",
     "\n",
     "# ドキュメントをロード（例としてテキストを使用）\n",
-    "dir_path = '/content/drive/MyDrive/Colab Notebooks/CollaborativeResearch/BandaiLogipal/BasicChat/loadtext2'\n",
+    "dir_path = 'loadtext2'\n",
     "\n",
     "documents = []\n",
     "\n",
