--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "executionInfo": {
      "elapsed": 3,
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "executionInfo": {
      "elapsed": 18069,
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "executionInfo": {
      "elapsed": 3637,
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -195,16 +195,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1. 教科書のp.62〜p.106ページで取り上げられている線形代数の主な内容は何ですか？\n",
-      "2. 教材として使用されているYouTubeのprof.Gilbert Strangの線形代数授業「1. The Geometry of Linear Equations」の主要な教訓は何ですか？\n",
-      "3. 写像の合成とは何ですか、その中で線形変換𝑓と𝑔の合成がどのように機能するか説明してください。\n",
-      "4. 線形変換𝑓によって𝑅のベクトル𝒙を𝑅のベクトル𝑓𝒙に変換したあと、そのベクトルをさらに線形変換𝑔によって𝑅のベクトル𝑔(𝑓𝒙)に変換する、このプロセスの重要性について詳しく説明してください。\n",
-      "5. 𝒙𝐴𝒙𝐵𝐴𝒙𝐴𝐵≠𝐵𝐴とはどういう意味ですか？\n",
-      "6. 課題中の単純パーセプトロンの表現 𝒚=𝒘$𝒙+𝑏から 𝒚=𝒘$𝒙へ移行する際のバイアス項(+𝑏)の役割は何ですか？\n",
-      "7. Lec02.ipynbの「入力画像ファイルから指定したディレクトリの中の画像から一番類似性が高い画像ファイル名を検索するプログラム」の部分における、コサイン類似度の計算の重要性は何ですか？\n",
-      "8. マンハッタン距離、ユークリッド距離、チェビシェフ距離とマハラノビス距離の違いは何ですか？\n",
-      "9. ベクトルの新データ（値段850円、重さ1450g）の計算方法を説明できますか？\n",
-      "10. 教科書p.114〜p.118で扱われている線形代数の主題は何ですか？\n"
+      "1. 線形代数において、ベクトルとは何を指しますか？\n",
+      "2. 線形写像とは何ですか？具体的な例を説明してください。\n",
+      "3. ベクトルに対する線形変換とは何ですか？\n",
+      "4. '𝑓(𝒙)'と '𝑔(𝑓𝒙)'の違いについて説明してください。\n",
+      "5. 線形代数の中で、写像の合成とは何を指しますか？\n",
+      "6. '𝐾𝑒𝑟𝑓'とは何を意味しますか？\n",
+      "7. '𝑑𝑖𝑚𝑉=dim𝐾𝑒𝑟𝑓+dim(𝐼𝑚𝑓)'という等式の意味を説明してください。\n",
+      "8. 線形代数における連続した一次方程式の解き方について説明してください。\n",
+      "9. 線形代数を活用したリアルワールドのアプリケーションは何が考えられますか？\n",
+      "10. Pythonで線形代数の問題を解く際の一般的な手法について説明してください。\n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -241,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "すみませんが、提供された情報には疑似逆行列についての説明は含まれていません。したがって、その質問には答えられません。\n"
+      "私は疑似逆行列についての具体的な知識を持っていません。検索機能を使用することができないため、セキュリティ上の理由から詳細な説明は提供できません。あなたの質問に対する疑似逆行列の詳細な説明を得るためには、信頼できる資料や参考書籍を調べてみてください。\n"
      ]
     }
    ],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -288,7 +288,7 @@
      "output_type": "stream",
      "text": [
       "* Running on local URL:  http://127.0.0.1:7860\n",
-      "* Running on public URL: https://3b9d32932ce89b4d3c.gradio.live\n",
+      "* Running on public URL: https://281b2fb5562b54719d.gradio.live\n",
       "\n",
       "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
      ]
@@ -296,7 +296,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://3b9d32932ce89b4d3c.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://281b2fb5562b54719d.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -309,7 +309,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
    "source": [
     "# インポート\n",
     "from langchain.vectorstores import Chroma\n",
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
+    "from langchain.text_splitter import Rec1ursiveCharacterTextSplitter\n",
     "from langchain.chains import VectorDBQA, RetrievalQA\n",
     "from langchain.document_loaders import TextLoader, PyPDFLoader\n",
     "from langchain_openai import OpenAIEmbeddings, ChatOpenAI\n",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -404,7 +404,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/nq/n3nkdz2558g2zjbwzth6xy700000gn/T/ipykernel_35474/350495278.py:58: UserWarning: You have not specified a value for the `type` parameter. Defaulting to the 'tuples' format for chatbot messages, but this is deprecated and will be removed in a future version of Gradio. Please set type='messages' instead, which uses openai-style dictionaries with 'role' and 'content' keys.\n",
+      "/var/folders/nq/n3nkdz2558g2zjbwzth6xy700000gn/T/ipykernel_73588/350495278.py:58: UserWarning: You have not specified a value for the `type` parameter. Defaulting to the 'tuples' format for chatbot messages, but this is deprecated and will be removed in a future version of Gradio. Please set type='messages' instead, which uses openai-style dictionaries with 'role' and 'content' keys.\n",
       "  chatbot = gr.ChatInterface(fn=chat_with_ai, chatbot=gr.Chatbot())\n",
       "/Users/yamadayuuhei/研究/Nakanishi_Lab/AIME-based-Explanation-System-for-ChatGPT-Outputs/AIME-based-Explanation-System/lib/python3.13/site-packages/gradio/chat_interface.py:321: UserWarning: The gr.ChatInterface was not provided with a type, so the type of the gr.Chatbot, 'tuples', will be used.\n",
       "  warnings.warn(\n"
@@ -415,21 +415,15 @@
      "output_type": "stream",
      "text": [
       "* Running on local URL:  http://127.0.0.1:7861\n",
+      "* Running on public URL: https://a6aed4215b1e517d29.gradio.live\n",
       "\n",
-      "Could not create share link. Please check your internet connection or our status page: https://status.gradio.app.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/04/23 16:00:02 [W] [service.go:132] login to server failed: dial tcp 44.237.78.176:7000: i/o timeout\n"
+      "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://a6aed4215b1e517d29.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -442,7 +436,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,15 +505,6 @@
     "# インターフェースの起動\n",
     "demo.launch(share=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "c222aoDCM8Qj"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
