--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "executionInfo": {
      "elapsed": 6477,
@@ -36,7 +36,19 @@
     },
     "id": "fC7q6QnDPIW2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'langchain'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mvectorstores\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Chroma\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01membeddings\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m OpenAIEmbeddings\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mlangchain\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtext_splitter\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RecursiveCharacterTextSplitter\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'langchain'"
+     ]
+    }
+   ],
    "source": [
     "from langchain.vectorstores import Chroma\n",
     "from langchain.embeddings import OpenAIEmbeddings\n",
@@ -53,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +74,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {
     "executionInfo": {
      "elapsed": 3,
@@ -88,14 +100,26 @@
     },
     "id": "SZEvBNCdPxmp"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m openai.api_key = \u001b[43mos\u001b[49m.getenv(\u001b[33m\"\u001b[39m\u001b[33mOPENAI_API_KEY\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'os' is not defined"
+     ]
+    }
+   ],
    "source": [
     "openai.api_key = os.getenv(\"OPENAI_API_KEY\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "executionInfo": {
      "elapsed": 18069,
@@ -109,7 +133,19 @@
     },
     "id": "1RVC0SOUL1Dp"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'PyPDF2'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mos\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mPyPDF2\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mDocument\u001b[39;00m:\n\u001b[32m      5\u001b[39m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, text, metadata):\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'PyPDF2'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import PyPDF2\n",
@@ -146,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "executionInfo": {
      "elapsed": 3637,
@@ -160,7 +196,19 @@
     },
     "id": "oamHbgKbRBFI"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'RecursiveCharacterTextSplitter' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m text_splitter = \u001b[43mRecursiveCharacterTextSplitter\u001b[49m(chunk_size=\u001b[32m1000\u001b[39m, chunk_overlap=\u001b[32m0\u001b[39m)\n\u001b[32m      2\u001b[39m texts = text_splitter.split_documents(documents)\n\u001b[32m      3\u001b[39m embeddings = OpenAIEmbeddings()\n",
+      "\u001b[31mNameError\u001b[39m: name 'RecursiveCharacterTextSplitter' is not defined"
+     ]
+    }
+   ],
    "source": [
     "text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=0)\n",
     "texts = text_splitter.split_documents(documents)\n",
@@ -172,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -192,19 +240,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. 教科書のp.62〜p.106ページで取り上げられている線形代数の主な内容は何ですか？\n",
-      "2. 教材として使用されているYouTubeのprof.Gilbert Strangの線形代数授業「1. The Geometry of Linear Equations」の主要な教訓は何ですか？\n",
-      "3. 写像の合成とは何ですか、その中で線形変換𝑓と𝑔の合成がどのように機能するか説明してください。\n",
-      "4. 線形変換𝑓によって𝑅のベクトル𝒙を𝑅のベクトル𝑓𝒙に変換したあと、そのベクトルをさらに線形変換𝑔によって𝑅のベクトル𝑔(𝑓𝒙)に変換する、このプロセスの重要性について詳しく説明してください。\n",
-      "5. 𝒙𝐴𝒙𝐵𝐴𝒙𝐴𝐵≠𝐵𝐴とはどういう意味ですか？\n",
-      "6. 課題中の単純パーセプトロンの表現 𝒚=𝒘$𝒙+𝑏から 𝒚=𝒘$𝒙へ移行する際のバイアス項(+𝑏)の役割は何ですか？\n",
-      "7. Lec02.ipynbの「入力画像ファイルから指定したディレクトリの中の画像から一番類似性が高い画像ファイル名を検索するプログラム」の部分における、コサイン類似度の計算の重要性は何ですか？\n",
-      "8. マンハッタン距離、ユークリッド距離、チェビシェフ距離とマハラノビス距離の違いは何ですか？\n",
-      "9. ベクトルの新データ（値段850円、重さ1450g）の計算方法を説明できますか？\n",
-      "10. 教科書p.114〜p.118で扱われている線形代数の主題は何ですか？\n"
+     "ename": "NameError",
+     "evalue": "name 'qa' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# 質問を作成するために invoke メソッドを使用\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m questions = \u001b[43mqa\u001b[49m.invoke(\u001b[33m\"\u001b[39m\u001b[33mこの文章の中で重要ど思う線形代数に関する内容についてを考える質問を10個考えてください\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# 結果の表示\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(questions[\u001b[33m'\u001b[39m\u001b[33mresult\u001b[39m\u001b[33m'\u001b[39m])\n",
+      "\u001b[31mNameError\u001b[39m: name 'qa' is not defined"
      ]
     }
    ],
